--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5193,7 +5193,7 @@ div[class*="col-"] > .form-group {
 
 .testimonial-with-bg {
   padding: 120px 0;
-  background-image: url('../img/testimonial-bg.png?1424866387');
+  background-image: url('../img/testimonial-bg-3.png');
   background-attachment: fixed;
   background-position: center center;
   color: #fff;
