--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -97,11 +97,11 @@ hr {
 }
 
 .twitter-bg {
-  background-color: #2b97f0;
+  background-color: #0077b5;
 }
 
 .googleplus-bg {
-  background-color: #dd4b39;
+  background-color: #7bb32e;
 }
 
 .rss-bg {
