--- a/assets/css/portfolio-item.css
+++ b/assets/css/portfolio-item.css
@@ -60,7 +60,7 @@ footer {
 }
 .fixed_headers tbody {
   display: block;
-  overflow: auto;
+  overflow: hidden;
   width: 100%;
   height: 300px;
 }
