--- a/assets/css/portfolio-item.css
+++ b/assets/css/portfolio-item.css
@@ -12,69 +12,169 @@ body {
     margin-bottom: 25px;
 }
 
+.specArea {
+  width: auto;
+  height: 322px;
+  display: block;
+  overflow-y: scroll;
+  margin-top: 5px;
+}
 
+.stockOptions {
+  padding: 20px;
+}
 
 footer {
     margin: 50px 0;
 }
 
+/*.specArea {
+  border-style: solid;
+  border-width: 2px;
+}*/
+
 
 /*Table CSS from http://codepen.io/tjvantoll/pen/JEKIu*/
+/*http://codepen.io/alassetter/pen/cyrfB*/
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100);
 
-.specArea {
-	margin-top: 10px;
-}
 
-.fixed_headers {
+
+div.table-title {
+   display: block;
+  margin: auto;
+  max-width: 600px;
+  padding:5px;
   width: 100%;
-  table-layout: fixed;
+}
+
+.table-title h3 {
+   color: #fafafa;
+   font-size: 30px;
+   font-weight: 400;
+   font-style:normal;
+   font-family: "Roboto", helvetica, arial, sans-serif;
+   text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+   text-transform:uppercase;
+}
+
+
+/*** Table Styles **/
+
+.table-fill {
+  background: white;
+  border-radius:3px;
   border-collapse: collapse;
+  height: 320px;
+  margin: auto;
+  max-width: 600px;
+  padding:3px;
+  width: 100%;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  animation: float 5s infinite;
 }
-.fixed_headers th {
-  text-decoration: underline;
+ 
+th {
+  color:#D5DDE5;;
+  background:#4aaf56;
+  border-bottom:4px solid #9ea7af;
+  border-right: 1px solid #343a45;
+  font-size:23px;
+  font-weight: 100;
+  padding:16px;
+  text-align:left;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  vertical-align:middle;
 }
-.fixed_headers th,
-.fixed_headers td {
-  padding: 5px;
+
+th:first-child {
+  border-top-left-radius:3px;
+}
+ 
+th:last-child {
+  border-top-right-radius:3px;
+  border-right:none;
+}
+  
+tr {
+  border-top: 1px solid #C1C3D1;
+  border-bottom-: 1px solid #C1C3D1;
+  color:#666B85;
+  font-size:16px;
+  font-weight:normal;
+  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+}
+ 
+tr:hover td {
+  background:#4E5066;
+  color:#FFFFFF;
+  border-top: 1px solid #22262e;
+  border-bottom: 1px solid #22262e;
+}
+ 
+tr:first-child {
+  border-top:none;
+}
+
+tr:last-child {
+  border-bottom:none;
+}
+ 
+tr:nth-child(odd) td {
+  background:#EBEBEB;
+}
+ 
+tr:nth-child(odd):hover td {
+  background:#4E5066;
+}
+
+tr:last-child td:first-child {
+  border-bottom-left-radius:3px;
+}
+ 
+tr:last-child td:last-child {
+  border-bottom-right-radius:3px;
+}
+ 
+td {
+  background:#FFFFFF;
+  padding:15px;
+  text-align:left;
+  vertical-align:middle;
+  font-weight:300;
+  font-size:12px;
+  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+  border-right: 1px solid #C1C3D1;
+  overflow: auto;
+}
+
+td:last-child {
+  border-right: 0px;
+}
+
+th.text-left {
   text-align: left;
 }
-.fixed_headers td:nth-child(1),
-.fixed_headers th:nth-child(1) {
-  min-width: 200px;
+
+th.text-center {
+  text-align: center;
 }
-.fixed_headers td:nth-child(2),
-.fixed_headers th:nth-child(2) {
-  min-width: 200px;
+
+th.text-right {
+  text-align: right;
 }
-.fixed_headers td:nth-child(3),
-.fixed_headers th:nth-child(3) {
-  width: 350px;
+
+td.text-left {
+  text-align: left;
 }
-.fixed_headers thead {
-  background-color: #333;
-  color: #FDFDFD;
+
+td.text-center {
+  text-align: center;
 }
-.fixed_headers thead tr {
-  display: block;
-  position: relative;
+
+td.text-right {
+  text-align: right;
 }
-.fixed_headers tbody {
-  display: block;
-  overflow: hidden;
-  width: 100%;
-  height: 300px;
-}
-.fixed_headers tbody tr:nth-child(even) {
-  background-color: #DDD;
-}
-.old_ie_wrapper {
-  height: 300px;
-  width: 750px;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-.old_ie_wrapper tbody {
-  height: auto;
-}
+
 
 /*End Table CSS*/
