--- a/assets/css/portfolioItem.css
+++ b/assets/css/portfolioItem.css
@@ -33,6 +33,9 @@ footer {
   border-width: 2px;
 }*/
 
+.boxed-content {
+  margin-top:20px;
+}
 
 /*Table CSS from http://codepen.io/tjvantoll/pen/JEKIu*/
 /*http://codepen.io/alassetter/pen/cyrfB*/
