--- a/assets/css/portfolioItem.css
+++ b/assets/css/portfolioItem.css
@@ -37,3 +37,16 @@ footer {
   margin-top:20px;
 }
 
+.color {
+  text-align: center;
+}
+
+/*@media (min-width: 768px)
+.col-sm-3 {
+    width: 50%;
+}*/
+
+.productDescription {
+  margin: 20px 20px;
+  text-align: center;
+}
