powerchairs2.html changed to email description

--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -1,5 +1,6 @@
 table {
-  margin-top: 5px;
+  padding-top: 20px;
+  padding-right: 10px;
   border-collapse: separate;
   border-spacing: 0;
   min-width: 100%;
